# Data-structures

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Array/: Array.cpp  Array.h
BinaryHeap/: BinaryHeap.cpp  BinaryHeap.h
DoubleList/: DoubleList.cpp  DoubleList.h  Node.cpp  Node.h
LinkedList/: LinkedList.cpp  LinkedList.h
LinkedList/Node/: Node.cpp  Node.h
src/: main.cpp
src/Collections/: AbstractCollection.h
src/Collections/Array/: Array.cpp  Array.h
src/Collections/BinaryHeap/: BinaryHeap.cpp  BinaryHeap.h
src/Collections/DoubleList/: DoubleList.cpp  DoubleList.h
src/Collections/DoubleList/Node/: DoubleListNode.cpp  DoubleListNode.h
src/Collections/RedBlackTree/: Color.h  Node.h  RedBlackTree.cpp  RedBlackTree.h
src/Collections/RedBlackTree/node/: Node.cpp  Node.h
src/FileReader/: FileReader.h
src/FileWriter/: FileWriter.cpp  FileWriter.h
src/TimeTester/: RandomGenerator.h  TimeTester.cpp  TimeTester.h  TimeTesterppp.h  Timer.cpp  Timer.h  TimerTester.h
src/gui/: Gui.cpp  Gui.h
src/gui/AutomatedTests/: AutomatedTests.cpp  AutomatedTests.h
src/gui/AutomatedTests/Structures/array/: ArrayTests.cpp  ArrayTests.h
src/gui/AutomatedTests/Structures/heap/: HeapTests.cpp  HeapTests.h
src/gui/AutomatedTests/Structures/list/: ListTests.cpp  ListTests.h
src/gui/CollectionUi/ArrayUi/: ArrayUi.cpp  ArrayUi.h
src/gui/CollectionUi/HeapUi/: HeapUi.cpp  HeapUi.h
src/gui/CollectionUi/ListUi/: ListUi.cpp  ListUi.h
src/gui/CollectionUi/RBTreeUi/: RedBlackTreeUi.cpp  RedBlackTreeUi.h
src/gui/Utils/: Utils.cpp
(+2 files in other folders)
